[package]
name = "b2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base64 = "0.21.7"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
humanize-bytes = "1.0.5"
mime = "0.3.17"
mime_guess = "2.0.4"
progress_bar = "1.0.5"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rs_sha1 = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
urlencoding = "2.1.3"
walkdir = "2.4.0"
